force-app/main/default/objects/Order/fields/Checkin__c.field-meta.xml
<CustomField>
    <fullName>Checkin__c</fullName>
    <description>This will store the information of booking checkin date</description>
    <label>Checkin</label>
    <type>Date</type>
</CustomField>