force-app/main/default/objects/Order/fields/Checkout__c.field-meta.xml
<CustomField>
    <fullName>Checkout__c</fullName>
    <description>This will store the checkout date of booking</description>
    <label>Checkout</label>
    <type>Date</type>
</CustomField>