force-app/main/default/objects/Order/fields/Guest_Email__c.field-meta.xml
<CustomField>
    <fullName>Guest_Email__c</fullName>
    <description>This field will store the email of the guest who is staying</description>
    <label>Guest Email</label>
    <type>Email</type>
</CustomField>