force-app/main/default/objects/Order/fields/Guest_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_First_Name__c</fullName>
    <description>This field will store the first name of the guest who is staying</description>
    <label>Guest First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>