force-app/main/default/objects/Order/fields/Guest_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Guest_Last_Name__c</fullName>
    <description>This field will store the last name of the guest who is staying</description>
    <label>Guest Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>