force-app/main/default/objects/Order/fields/Guest_Phone__c.field-meta.xml
<CustomField>
    <fullName>Guest_Phone__c</fullName>
    <description>This field will store the Phone of the guest who is staying</description>
    <label>Guest Phone</label>
    <type>Phone</type>
</CustomField>