force-app/main/default/objects/Order/fields/Guest_Special_Request__c.field-meta.xml
<CustomField>
    <fullName>Guest_Special_Request__c</fullName>
    <description>This field will store the special request of the guest who is staying</description>
    <label>Guest Special Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>