force-app/main/default/objects/Order/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <description>This is an icon field indicating status, tied to the Order Status field.</description>
    <formula>IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Status, 
&quot;Draft&quot;, &quot;015Hr000004g3nm&amp;oid=00DHr00000JiL7G&quot;, 
&quot;Active&quot;, &quot;015Hr000004g3nn&amp;oid=00DHr00000JiL7G&quot;, 
&quot;Activated&quot;, &quot;015Hr000004g3nn&amp;oid=00DHr00000JiL7G&quot;, 
&quot;015Hr000004g3nn&amp;oid=00DHr00000JiL7G&quot;),&quot;Status&quot;,24,24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicator</label>
    <type>Text</type>
</CustomField>