force-app/main/default/objects/Order/fields/IsOrderItemsCreated__c.field-meta.xml
<CustomField>
    <fullName>IsOrderItemsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked after OrderItems are created for Order</description>
    <label>IsOrderItemsCreated</label>
    <type>Checkbox</type>
</CustomField>