force-app/main/default/objects/Order/recordTypes/SDO_Order_Business.recordType-meta.xml
<RecordType>
    <fullName>SDO_Order_Business</fullName>
    <active>true</active>
    <description>Used for B2B order use cases.  Includes contract fields.</description>
    <label>Order - Business</label>
</RecordType>