force-app/main/default/objects/Order/listViews/All_Orders.listView-meta.xml
<ListView>
    <fullName>All_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>Guest_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Orders</label>
</ListView>